working on distance

--- a/code_base/python/etl/merge_distance2cops.ipynb
+++ b/code_base/python/etl/merge_distance2cops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,19 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_closest(lat,long):\n",
+    "def find_closest(lat, long):\n",
     "    if lat == 0 or long == 0:\n",
     "        return 'No Lat/Long', 999999\n",
     "    else:\n",
     "        try:\n",
     "            input_latlong = (long,lat)\n",
-    "            distance_list = []\n",
-    "\n",
-    "            for index, row in POLICE_DF.iterrows():\n",
+    "            #distance_list = []\n",
+    "            pdf = POLICE_DF.copy()\n",
+    "            pdf['distance'] = pdf.apply(lambda x: distance.distance(input_latlong, (x.LONGITUDE,x.LATITUDE)).miles, axis=1)\n",
+    "            nearest_station = pdf.iloc[pdf['distance'].idxmin()]\n",
+    "            return nearest_station['station'], nearest_station['distance']\n",
+    "            \"\"\"for row in POLICE_DF.iterrows():\n",
     "                distance_holder = {}\n",
     "                station_latlong = [row['LATITUDE'], row['LONGITUDE']]\n",
     "                distance_holder['station'] = row['ADDRESS']\n",
@@ -66,9 +69,224 @@
     "                distance_list.append(distance_holder)\n",
     "                distance_df = pd.DataFrame(distance_list)\n",
     "                nearest_station = distance_df.iloc[distance_df['distance'].idxmin()]\n",
-    "                return nearest_station['station'], nearest_station['distance'] \n",
-    "        except:\n",
-    "            return 'Error', 999999"
+    "                print(f\"{distance_df.head()}\")\n",
+    "                return nearest_station['station'], nearest_station['distance'] \"\"\"\n",
+    "        except e:\n",
+    "            return 'Error something something', 999999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nearest_station = pdf.iloc[pdf['distance'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minidf = bigdf.iloc[0:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-87.634761</td>\n",
+       "      <td>41.818171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>-87.646050</td>\n",
+       "      <td>41.828347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>-87.726359</td>\n",
+       "      <td>41.865029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>-87.736363</td>\n",
+       "      <td>41.918245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>-87.692793</td>\n",
+       "      <td>41.896592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>-87.704407</td>\n",
+       "      <td>41.870062</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    longitude   latitude\n",
+       "0         NaN        NaN\n",
+       "1         NaN        NaN\n",
+       "2         NaN        NaN\n",
+       "3         NaN        NaN\n",
+       "4  -87.634761  41.818171\n",
+       "..        ...        ...\n",
+       "95 -87.646050  41.828347\n",
+       "96 -87.726359  41.865029\n",
+       "97 -87.736363  41.918245\n",
+       "98 -87.692793  41.896592\n",
+       "99 -87.704407  41.870062\n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minidf[['longitude','latitude']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Error something something', 999999)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_closest(-87.634761,41.818171)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tkkim\\AppData\\Local\\Temp\\ipykernel_47276\\3493688740.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')\n",
+      "C:\\Users\\tkkim\\AppData\\Local\\Temp\\ipykernel_47276\\3493688740.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')\n"
+     ]
+    }
+   ],
+   "source": [
+    "minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     Error something something\n",
+       "1     Error something something\n",
+       "2     Error something something\n",
+       "3     Error something something\n",
+       "4     Error something something\n",
+       "                ...            \n",
+       "95    Error something something\n",
+       "96    Error something something\n",
+       "97    Error something something\n",
+       "98    Error something something\n",
+       "99    Error something something\n",
+       "Name: closest_station, Length: 100, dtype: object"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minidf['closest_station']"
    ]
   },
   {
@@ -77,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigdf[['closest_station', 'closest_station_distance']] = bigdf[bigdf['latitude'].isnull() == False].apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')"
+    "#bigdf[['closest_station', 'closest_station_distance']] = bigdf[bigdf['latitude'].isnull() == False].apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')"
    ]
   },
   {
@@ -87,6 +305,56 @@
    "outputs": [],
    "source": [
     "bigdf.to_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3510 S Michigan Ave    1164132\n",
+       "Name: closest_station, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['closest_station'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1181139, 136)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.shape"
    ]
   }
  ],
