99percent sure it works now

--- a/code_base/python/etl/merge_distance2cops.ipynb
+++ b/code_base/python/etl/merge_distance2cops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigdf = pd.read_csv('./results/5_years_merged_with_weather_and_311.csv')"
+    "bigdf = pd.read_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,8 @@
     "            pdf = POLICE_DF.copy()\n",
     "            pdf['distance'] = pdf.apply(lambda x: distance.distance(input_latlong, (x.LONGITUDE,x.LATITUDE)).miles, axis=1)\n",
     "            nearest_station = pdf.iloc[pdf['distance'].idxmin()]\n",
-    "            return nearest_station['station'], nearest_station['distance']\n",
+    "            #print(nearest_station)\n",
+    "            return nearest_station['ADDRESS'], nearest_station['distance']\n",
     "            \"\"\"for row in POLICE_DF.iterrows():\n",
     "                distance_holder = {}\n",
     "                station_latlong = [row['LATITUDE'], row['LONGITUDE']]\n",
@@ -71,222 +72,52 @@
     "                nearest_station = distance_df.iloc[distance_df['distance'].idxmin()]\n",
     "                print(f\"{distance_df.head()}\")\n",
     "                return nearest_station['station'], nearest_station['distance'] \"\"\"\n",
-    "        except e:\n",
+    "        except Exception as e:\n",
+    "            #print(e)\n",
     "            return 'Error something something', 999999"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nearest_station = pdf.iloc[pdf['distance'].idxmin()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "minidf = bigdf.iloc[0:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-87.634761</td>\n",
-       "      <td>41.818171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>-87.646050</td>\n",
-       "      <td>41.828347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>-87.726359</td>\n",
-       "      <td>41.865029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>-87.736363</td>\n",
-       "      <td>41.918245</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>-87.692793</td>\n",
-       "      <td>41.896592</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>-87.704407</td>\n",
-       "      <td>41.870062</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    longitude   latitude\n",
-       "0         NaN        NaN\n",
-       "1         NaN        NaN\n",
-       "2         NaN        NaN\n",
-       "3         NaN        NaN\n",
-       "4  -87.634761  41.818171\n",
-       "..        ...        ...\n",
-       "95 -87.646050  41.828347\n",
-       "96 -87.726359  41.865029\n",
-       "97 -87.736363  41.918245\n",
-       "98 -87.692793  41.896592\n",
-       "99 -87.704407  41.870062\n",
-       "\n",
-       "[100 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "minidf[['longitude','latitude']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Error something something', 999999)"
+       "('5101 S Wentworth Ave', 0.2952944847352142)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_closest(-87.634761,41.818171)"
+    "find_closest(41.818171,-87.634761)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tkkim\\AppData\\Local\\Temp\\ipykernel_47276\\3493688740.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\tkkim\\AppData\\Local\\Temp\\ipykernel_25720\\3486701180.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')\n",
-      "C:\\Users\\tkkim\\AppData\\Local\\Temp\\ipykernel_47276\\3493688740.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')\n"
+      "  minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.latitude, x.longitude), axis=1, result_type='expand')\n"
      ]
     }
    ],
    "source": [
-    "minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.longitude, x.latitude), axis=1, result_type='expand')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     Error something something\n",
-       "1     Error something something\n",
-       "2     Error something something\n",
-       "3     Error something something\n",
-       "4     Error something something\n",
-       "                ...            \n",
-       "95    Error something something\n",
-       "96    Error something something\n",
-       "97    Error something something\n",
-       "98    Error something something\n",
-       "99    Error something something\n",
-       "Name: closest_station, Length: 100, dtype: object"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "minidf['closest_station']"
+    "minidf = bigdf.iloc[50:400]\n",
+    "minidf[['closest_station', 'closest_station_distance']] = minidf.apply(lambda x: find_closest(x.latitude, x.longitude), axis=1, result_type='expand')"
    ]
   },
   {
@@ -300,11 +131,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tkkim\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\point.py:472: UserWarning: Latitude normalization has been prohibited in the newer versions of geopy, because the normalized value happened to be on a different pole, which is probably not what was meant. If you pass coordinates as positional args, please make sure that the order is (latitude, longitude) or (y, x) in Cartesian terms.\n",
+      "  return cls(*args)\n",
+      "c:\\Users\\tkkim\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\point.py:472: UserWarning: Latitude normalization has been prohibited in the newer versions of geopy, because the normalized value happened to be on a different pole, which is probably not what was meant. If you pass coordinates as positional args, please make sure that the order is (latitude, longitude) or (y, x) in Cartesian terms.\n",
+      "  return cls(*args)\n",
+      "c:\\Users\\tkkim\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\point.py:472: UserWarning: Latitude normalization has been prohibited in the newer versions of geopy, because the normalized value happened to be on a different pole, which is probably not what was meant. If you pass coordinates as positional args, please make sure that the order is (latitude, longitude) or (y, x) in Cartesian terms.\n",
+      "  return cls(*args)\n",
+      "c:\\Users\\tkkim\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\point.py:472: UserWarning: Latitude normalization has been prohibited in the newer versions of geopy, because the normalized value happened to be on a different pole, which is probably not what was meant. If you pass coordinates as positional args, please make sure that the order is (latitude, longitude) or (y, x) in Cartesian terms.\n",
+      "  return cls(*args)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bigdf[['closest_station', 'closest_station_distance']] = bigdf.apply(lambda x: find_closest(x.latitude, x.longitude), axis=1, result_type='expand')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigdf.to_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv', index=False)"
+    "#bigdf.to_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv', index=False)"
    ]
   },
   {
@@ -374,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
