for sure working

--- a/code_base/python/etl/merge_distance2cops.ipynb
+++ b/code_base/python/etl/merge_distance2cops.ipynb
@@ -155,61 +155,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bigdf.to_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv', index=False)"
+    "bigdf.to_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = pd.read_csv('./results/5_years_merged_with_weather_and_311and_policedistance.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3510 S Michigan Ave    1164132\n",
-       "Name: closest_station, dtype: int64"
+       "closest_station\n",
+       "4650 N Pulaski Rd            126155\n",
+       "3510 S Michigan Ave           91850\n",
+       "2255 E 103rd St               86124\n",
+       "6464 N Clark St               66840\n",
+       "5400 N Lincoln Ave            64612\n",
+       "5101 S Wentworth Ave          63675\n",
+       "5555 W Grand Ave              62736\n",
+       "5701 W Madison St             59033\n",
+       "3315 W Ogden Ave              54965\n",
+       "7040 S Cottage Grove Ave      54771\n",
+       "1412 S Blue Island Ave\\n      48172\n",
+       "1438 W 63rd St                44980\n",
+       "1718 S State St               43696\n",
+       "727 E 111th St                40676\n",
+       "2150 N California Ave         38913\n",
+       "7808 S Halsted St             37980\n",
+       "1900 W Monterey Ave           35332\n",
+       "1160 N Larrabee St            34239\n",
+       "3151 W Harrison St            34134\n",
+       "850 W Addison St              32129\n",
+       "3120 S Halsted St             24341\n",
+       "Error something something     17011\n",
+       "3420 W 63rd St                14446\n",
+       "5151 N Milwaukee Ave           4329\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test['closest_station'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1181139, 136)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.shape"
+    "bigdf['closest_station'].value_counts()"
    ]
   }
  ],
